# OS

./: CMakeLists.txt
lw1/: CMakeLists.txt  linux.cpp
lw1/task1/: CMakeLists.txt  windows.cpp
lw1/task2/: linux.cpp
lw1/task4/: solution.sh  utils1.sh
lw1/task5/: solution2.sh  utils2.sh
lw2/ExePacker/: CMakeLists.txt  DataPacker.cpp  DataPacker.h  TempFile.h  main.cpp
lw2/ExePacker/input/: input.cpp
lw2/FlipCase/: CMakeLists.txt  main.cpp
lw2/ListProcLinux/: CMakeLists.txt  ProcessLister.cpp  ProcessLister.h  main.cpp
lw2/Zombie/: CMakeLists.txt  Zombie.cpp  zombie.cpp
lw3/MtImgSim/: CMakeLists.txt  main.cpp
lw3/MtImgSim/Image/: Img.cpp  Img.h
lw3/MtImgSim/Threads/: Threads.cpp  Threads.h
lw3/Thumbgen/: CMakeLists.txt  main.cpp
lw3/Thumbgen/Image/: Image.h
lw3/Thumbgen/Threads/: Threads.cpp  Threads.h
lw4/MtQueue/: CMakeLists.txt  MtQueue.h  MtQueueTest.cpp  NotifyBenchmark.cpp  main.cpp
lw4/MtSearch/: CMakeLists.txt  MtSearch.cpp  MtSearch.h  SearchBenchmark.cpp  main.cpp
lw4/MtSearch/Controller/: Controller.cpp  Controller.h
lw5/VirtMemSim/: CMakeLists.txt
lw5/VirtMemSim/OSHandler/: IOSHandler.h  MyOS.cpp  MyOS.h  ReferenceCollector.h
lw5/VirtMemSim/OSHandler/DisplaceAlgorithm/: Aging.cpp  Aging.h  DisplaceAlgorithmInterface.h
lw5/VirtMemSim/PTE/: PageTableEntry.h
lw5/VirtMemSim/Physical/: PhysicalMemory.cpp  PhysicalMemory.h
lw5/VirtMemSim/SwapManager/: SwapManager.cpp  SwapManager.h
lw5/VirtMemSim/Virtual/: VMContext.h  VirtualMemory.cpp  VirtualMemory.h
lw5/VirtMemSim/test/: MockOSHandler.h  MockVirtualMemoryTest.cpp  PhysicalMemoryTest.cpp  VirtualMemoryTest.cpp
lw6/BPlusTree/: BPlusTree.cpp  BPlusTree.h  BPlusTreeConf.h  CMakeLists.txt  FileRAII.h  TreeTest.cpp  main.cpp
lw7/FIleFlashImage/: CMakeLists.txt  Fat32Data.h  FlashImgReader.cpp  FlashImgReader.h  main.cpp
lw8/Calculator/: CMakeLists.txt  SocketGuard.h  main.cpp
lw8/Calculator/Client/: Client.cpp  Client.h
lw8/Calculator/Server/: Calculator.cpp  Calculator.h  Server.cpp  Server.h
lw8/PaintOnline/: CMakeLists.txt  Segment.h  main.cpp
lw8/PaintOnline/App/: App.cpp  App.h
lw8/PaintOnline/Client/: Client.cpp  Client.h
lw8/PaintOnline/Server/: Room.cpp  Room.h  Server.cpp  Server.h  Session.cpp  Session.h
lw8/WebSearch/: CMakeLists.txt  main.cpp
lw8/WebSearch/backend/: FileInfoOutput.h  JsonConverter.h  RequestHandler.h
lw8/WebSearch/backend/Handlers/: BadRequestHandler.h  BaseHandler.h  NotFoundHandler.h  ProcessOptionsHandler.h
lw8/WebSearch/backend/MtSearch/: MtSearch.cpp  MtSearch.h
lw8/WebSearch/backend/Server/: Listener.cpp  Listener.h  Session.cpp  Session.h
lw8/WebSearch/frontend/scripts/: add_page.js  main_page.js  results.js
lw8/WebSearch/frontend/view/: add_page.html  main_page.html  results.html
lw8/WebSearch/frontend/view/style/: add_page.css  main_page.css  results.css
